integrate with server